# pick-my-supervisor

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: pr-pipeline.yaml  trunk-pipeline.yaml
.kilo/plans/: cloud-run-env-vars.md  improve-rag-scoring.md
apps/backend/: .env.example  .gcloudignore  .gitignore  Cargo.toml  Dockerfile
apps/backend/src/: main.rs
apps/frontend/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx
apps/frontend/src/components/: SupervisorCard.tsx  TagInput.test.tsx  TagInput.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
apps/frontend/src/lib/: use-theme.ts
