[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = "0.7"
dotenvy = "0.15.7"
qdrant-client = "1.18.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.27.0"
serde_json = "1.0.150"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] } # Helpful for frontend integration
